# NeuralSpace

./: .gitignore  JUPYTER_SETUP.md  README.md  download  ml_model_store_schema.sql  neuralforge_ui_audit.md  pyrightconfig.json.bak  setup_local_db.sql
backend/: .dockerignore  .env  .env.example  .env.production.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule  docker-compose.test.yml  docker-compose.yml  list_buckets.py  logs.txt  logs2.txt  logs3.txt  merge_mlflow_schema_into_public.sql  pyproject.toml  pyrightconfig.json  requirements.txt  scratch_db.py  scratch_test.py  scratch_test_insert.py  search_id.py  setup_local_db.sql  test_dvc_client.py  test_lineage.py  test_login.py  test_out.txt  test_rclone_oauth.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0000_init_users.py  0001_create_workspace_tables.py  0002_ds_models.py  0003_user_password.py  0004_user_full_name.py  0005_mlops_tracking_schema.py  0006_external_runtime_sessions.py  0007_align_external_colab_workspaces.py  0008_colab_runtime_tracking.py  0009_dataset_upload_metadata.py  0009_dvc_profiles.py  0010_merge_0009_branches.py  0011_dvc_profile_archived.py  0012_cloud_storage_integration.py  10ff4a5a9b38_add_git_tracking_and_sync_preferences.py  42b5735fc9fe_cleanup_colab_workspace_schema.py  5d80ae5b92b3_add_github_app_to_dvc_profiles.py  5e23d17f8b5b_add_oauth_fields_to_storageconnection.py  6a1b2c3d4e5f_add_git_integration.py  a5e6bded0f6a_add_storageconnection_table.py  c14bbe97f431_add_is_default_to_storage_connection.py  dfe7f8b43b50_add_storage_providers.py  e5b087771be6_add_is_default_to_storageprovider.py  f5e49ed73434_create_workspace_assets_tables.py
backend/app/: __init__.py  celery_config.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  health_router.py  router.py
backend/app/clients/: __init__.py  minio_client.py  upstream_client.py
backend/app/core/: celery_app.py  error_handlers.py  exceptions.py  logging.py  metrics.py  security.py  storage_exceptions.py  tracing.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  download_task.py  ml_model.py
backend/app/middleware/: auth_middleware.py  rate_limit_middleware.py
backend/app/models/: __init__.py  base.py  dataset.py  git_integration.py  mlops_tracking.py  model_registry.py  runtime_session.py  storage_audit_log.py  storage_connection.py  storage_provider.py  sync_job.py  user.py  workspace.py  workspace_assets.py  workspace_event.py
backend/app/repositories/: __init__.py  mlops_dataset_repository.py  mlops_model_repository.py  storage_audit_log_repository.py  storage_connection_repository.py  sync_job_repository.py  user_repository.py  workspace_repository.py
backend/app/schemas/: __init__.py  auth.py  colab.py  lineage.py  mlops_dataset.py  mlops_model.py  storage.py  storage_provider.py  workspace.py
backend/app/services/: __init__.py  colab_claim_service.py  dataset_delta_service.py  dataset_storage_service.py  dataset_upload_models.py  dataset_upload_service.py  dataset_version_service.py  dvc_profile_service.py  gc_service.py  gdrive_service.py  k8s_service.py  k8s_templates.py  metadata_generator.py  mlops_dataset_service.py  mlops_model_service.py  model_service.py  notification_service.py  pvc_service.py  runtime_session_service.py  storage_service.py  task_service.py  validation_report_generator.py  workspace_service.py
backend/app/services/parsers/: __init__.py  general_dataset_parser.py  yolo_dataset_parser.py
backend/app/services/storage/: base.py  dvc_adapter.py  factory.py  (+7 more)
backend/app/utils/: github_app.py  ngrok.py  ssh_key_manager.py
backend/app/workers/: __init__.py  celery_app.py  celery_beat_schedule.py  db.py  download_worker.py  gc_tasks.py  mlops_tasks.py  monitoring_tasks.py  provisioning_tasks.py  recovery_worker.py  tasks.py
backend/cloud_ide_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/docs/: CI_CD_SECRETS.md  COLAB_EXTERNAL_RUNTIME_ARCHITECTURE.md  LINEAGE_FRONTEND_GUIDE.md  LINEAGE_QUERY_PLAN.md  OBSERVABILITY_AND_E2E_GUIDE.md  monitoring-observability-integration.md
backend/nginx/: nginx.conf  nginx.test.conf
backend/postgres-init/: 01-create-mlflow-db.sh
backend/scripts/: data_validation.py  evaluate.py  fix_lineage_fake_data.sql  organize_minio_layout.py  register_model.py  restore_minio_metadata.sql  schema.sql  seed.sql  seed_demo_experiments.sql  seed_dev_data.py  seed_real_lineage.sql  sync_public_to_mlops.py  train.py
backend/src/config/: mlflow.py
backend/src/services/: __init__.py  lineage_service.py
backend/test_gdrive/: data.yaml
backend/test_samples/: UPLOAD_TEST_GUIDE.md
backend/test_samples/datasets/: dataset-metadata.json  sample-dataset.csv
backend/test_samples/models/: model-metadata.json  sample-model.onnx
backend/tests/: conftest.py  test_auth.py  test_colab_claims.py  test_config.py  test_dataset_upload_parsers.py  test_dvc_client.py  test_gc.py  test_health.py  test_k8s_service.py  test_lineage_service.py  test_mlflow_client.py  test_mlops_datasets_api.py  test_mlops_models_api.py  test_rclone_service.py  test_storage_service.py  test_workers.py  test_workspace_api.py
backend/tests/integration/: test_api.py  test_full_workspace_lifecycle.py  test_storage_api.py
backend/tests/unit/: test_storage_service.py
(+461 files in other folders)
