[project]
name = "cloud-ide-platform"
version = "1.0.0"
description = "NeuralSpace MLOps control plane with Google Colab external runtime"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Development Team", email = "dev@platform.com" }
]

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic-settings==2.3.0",
    "redis[hiredis]==5.0.7",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.27.0",
    "minio==7.2.7",
    "mlflow==2.14.3",
    "dvc[s3]==3.59.2",
    "boto3==1.34.162",
    "pyarrow>=14.0.0,<16",
    "pathspec==0.11.2",
    "structlog==24.2.0",
    "prometheus-client==0.20.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.25.0",
    "opentelemetry-instrumentation-fastapi==0.46b0",
    "opentelemetry-instrumentation-sqlalchemy==0.46b0",
    "opentelemetry-instrumentation-redis==0.46b0",
    "opentelemetry-instrumentation-httpx==0.46b0",
    "pytest-asyncio==0.23.7",
    "pytest==8.2.2",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: tests requiring docker-compose dependencies",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pyright]
include = ["app", "src"]
extraPaths = ["."]
